--- a/.config/sway/config
+++ b/.config/sway/config
@@ -4,6 +4,9 @@
 #
 # Read `man 5 sway` for a complete reference.
 
+# auto disable TouchPad on usb plugged
+input 2:7:SynPS/2_Synaptics_TouchPad events disabled_on_external_mouse
+
 for_window [class="^.*"] border none
 for_window [class="^.*"] default_border none
 for_window [app_id="^.*"] border none
