--- a/.config/sway/config
+++ b/.config/sway/config
@@ -4,12 +4,10 @@
 #
 # Read `man 5 sway` for a complete reference.
 
-# auto disable TouchPad on usb plugged
-input 2:7:SynPS/2_Synaptics_TouchPad events disabled_on_external_mouse
 
 for_window [class="^.*"] border none
 for_window [class="^.*"] default_border none
-for_window [appswaymsg _id="^.*"] border none
+for_window [app_id="^.*"] border none
 for_window [app_id="^.*"] default_border none
 
 gaps inner 4
@@ -19,9 +17,6 @@ input type:keyboard {
     xkb_layout pt
     xkb_options grp:win_space_toggle
 }
-
-seat seat0 xcursor_theme "Breeze"
-exec_always gsettings set org.gnome.desktop.interface cursor-theme "Breeze"
 
 font pango:Font Awesome 5 Free, Solid 13
 
@@ -67,6 +62,12 @@ set $menu ulauncher
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
+
+# auto disable TouchPad on usb plugged
+input 2:7:SynPS/2_Synaptics_TouchPad events disabled_on_external_mouse
+
+seat seat0 xcursor_theme "Breeze"
+exec_always gsettings set org.gnome.desktop.interface cursor-theme "Breeze"
 
 ### Key bindings
 #
@@ -187,8 +188,6 @@ bindsym Ctrl+Shift+BackSpace exec $HOME/.config/sway/kill-casts.sh
 bindsym $mod+Print exec $HOME/.config/sway/start-cast.sh
 bindsym $mod+Shift+Print exec $HOME/.config/sway/start-cast-v2.sh
 bindsym Print exec grim -g "$(slurp)" - | wl-copy
-
-bindsym $mod+e exec wlogout
 
 for_window [class="GParted"] floating enable
 for_window [app_id="zenity"] floating enable
