--- a/.config/sway/config
+++ b/.config/sway/config
@@ -183,7 +183,8 @@ client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-col
 client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color $indicator-color	$bg-color
 client.urgent           $urgent-bg-color   $urgent-bg-color   $text-color          $indicator-color	$bg-color
 
-bindsym Ctrl+Shift+Print exec wf-recorder -g "$(slurp)" -f ~/Videos/recording_$(date +"%Y-%m-%d_%H:%M:%S.webm") --codec=vp8_vaapi  -d /dev/dri/renderD128
+# bindsym Ctrl+Shift+Print exec wf-recorder -g "$(slurp)" -f ~/Videos/recording_$(date +"%Y-%m-%d_%H:%M:%S.webm") --codec=vp8_vaapi  -d /dev/dri/renderD128
+Ctrl+Shift+Print exec optirun wf-recorder -g "$(slurp)" -f ~/Videos/recording_$(date +"%Y-%m-%d_%H:%M:%S.mp4") --codec=libx264 -d /dev/dri/renderD128
 bindsym Ctrl+Shift+BackSpace exec $HOME/.config/sway/kill-casts.sh
 bindsym $mod+Print exec $HOME/.config/sway/start-cast.sh
 bindsym $mod+Shift+Print exec $HOME/.config/sway/start-cast-v2.sh
