fix waybar clock timezone

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -62,7 +62,7 @@
         "spacing": 10
     },
     "clock": {
-        // "timezone": "America/New_York",
+        "timezone": "Europe/Lisbon",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt>{calendar}</tt>",
         "format": "{:%H:%M %d/%m/%Y}"
     },
