--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -189,7 +189,7 @@ cursor_stop_blinking_after 15.0
 
 #: Scrollback {{{
 
-scrollback_lines 2000
+scrollback_lines 10000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -219,14 +219,14 @@ scrollback_pager_history_size 0
 #: unformatted text. A value of zero or less disables this feature.
 #: The maximum allowed size is 4GB.
 
-wheel_scroll_multiplier 5.0
+wheel_scroll_multiplier 0.5
 
 #: Modify the amount scrolled by the mouse wheel. Note this is only
 #: used for low precision scrolling devices, not for high precision
 #: scrolling on platforms such as macOS and Wayland. Use negative
 #: numbers to change scroll direction.
 
-touch_scroll_multiplier 1.0
+touch_scroll_multiplier 3.0
 
 #: Modify the amount scrolled by a touchpad. Note this is only used
 #: for high precision scrolling devices on platforms such as macOS and
@@ -317,7 +317,7 @@ click_interval -1.0
 #: clicks (in seconds). Negative numbers will use the system default
 #: instead, if available, or fallback to 0.5.
 
-focus_follows_mouse no
+focus_follows_mouse yes
 
 #: Set the active window to the window under the mouse when moving the
 #: mouse around
