add new scripts for light, sound and media control

--- a/.config/mako/config
+++ b/.config/mako/config
@@ -1,1 +1,18 @@
 default-timeout=5000
+width=346
+border-size=0
+border-radius=4
+margin=16
+padding=8
+
+[category=XF86BINDING]
+anchor=center
+
+[category=XF86BINDING_MDP]
+background-color=#FFFFFF00
+padding=0
+margin=0
+width=70
+height=70
+max-icon-size=70
+anchor=center
