--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,4 +1,6 @@
 {
+    #!shellscript
+    
     // "layer": "top", // Waybar at top layer
     // "position": "bottom", // Waybar position (top|bottom|left|right)
     "height": 30, // Waybar height (to be removed for auto height)
