--- a/.config/sway/config
+++ b/.config/sway/config
@@ -2,144 +2,147 @@
 
 ### Basic style configuration
 
-    for_window [class="^.*"] border none
-    for_window [class="^.*"] default_border none
-    for_window [app_id="^.*"] border none
-    for_window [app_id="^.*"] default_border none
+for_window [class="^.*"] border none
+for_window [class="^.*"] default_border none
+for_window [app_id="^.*"] border none
+for_window [app_id="^.*"] default_border none
 
-    gaps inner 8
-    gaps outer 0
+gaps inner 8
+gaps outer 0
 
-    font pango:Font Awesome 5 Free, Solid 13
+font pango:Font Awesome 5 Free, Solid 13
 
-    # set mouse cursor
-    seat seat0 xcursor_theme "Breeze" 24
-    exec_always gsettings set org.gnome.desktop.interface cursor-theme "Breeze"
+# set mouse cursor
+seat seat0 xcursor_theme "Breeze" 24
+exec_always gsettings set org.gnome.desktop.interface cursor-theme "Breeze"
 
 ### Variables
 
-    set $mod Mod4
+set $mod Mod4
 
-    set $left Left
-    set $down Down
-    set $up Up
-    set $right Right
+set $left Left
+set $down Down
+set $up Up
+set $right Right
 
-    set $term kitty
+set $term kitty
 
-    # set $menu GDK_BACKEND=x11 ulauncher
-    # set $menu ulauncher
-    set $menu wofi
+# set $menu GDK_BACKEND=x11 ulauncher
+# set $menu ulauncher
+set $menu wofi
 
 ### Input configuration
-    
-    # You can get the names of your inputs by running: swaymsg -t get_inputs
-    # Read `man 5 sway-input` for more information about this section.
 
-    # keyboard layout
+# You can get the names of your inputs by running: swaymsg -t get_inputs
+# Read `man 5 sway-input` for more information about this section.
 
-    input type:keyboard {
-        xkb_layout pt
-        xkb_options grp:win_space_toggle
-    }
+# keyboard layout
 
-    # touchpad settings:
+input type:keyboard {
+    xkb_layout pt
+    xkb_options grp:win_space_toggle
+}
 
-    input type:touchpad {
-        events disabled_on_external_mouse #auto disable TouchPad on usb plugged
-        tap enabled
-        natural_scroll enable
-        middle_emulation enable
-    }
+# touchpad settings:
+
+input type:touchpad {
+    events disabled_on_external_mouse #auto disable TouchPad on usb plugged
+    tap enabled
+    natural_scroll enable
+    middle_emulation enable
+}
 
 ### Key bindings
 #
 # Basics:
 #
-    bindsym $mod+Return exec $term
-    bindsym $mod+q kill
-    bindsym $mod+d exec $menu
-    bindsym $mod+Shift+d exec $menu --show=run
-    bindsym Alt+Tab exec $HOME/.config/sway/window-switcher.sh
-    floating_modifier $mod normal
-    bindsym $mod+Shift+r reload
-    bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
+bindsym $mod+Return exec $term
+bindsym $mod+q kill
+bindsym $mod+d exec $menu
+bindsym $mod+Shift+d exec $menu --show=run
+bindsym Alt+Tab exec $HOME/.config/sway/window-switcher.sh
+floating_modifier $mod normal
+bindsym $mod+Shift+r reload
+bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
 #
 # Moving around:
 #
-    focus_wrapping force
+focus_wrapping force
 
-    # Move your focus around
-    bindsym $mod+$left focus left
-    bindsym $mod+$down focus down
-    bindsym $mod+$up focus up
-    bindsym $mod+$right focus right
+# Move your focus around
+bindsym $mod+$left focus left
+bindsym $mod+$down focus down
+bindsym $mod+$up focus up
+bindsym $mod+$right focus right
 
-    # Move the focused window with the same, but add Shift
-    bindsym $mod+Shift+$left move left
-    bindsym $mod+Shift+$down move down
-    bindsym $mod+Shift+$up move up
-    bindsym $mod+Shift+$right move right
+# Move the focused window with the same, but add Shift
+bindsym $mod+Shift+$left move left
+bindsym $mod+Shift+$down move down
+bindsym $mod+Shift+$up move up
+bindsym $mod+Shift+$right move right
 #
 # Layout stuff:
 #
-    bindsym $mod+h splith
-    bindsym $mod+v splitv
-    bindsym $mod+tab layout toggle split tabbed
-    bindsym $mod+Control+tab layout toggle split
-    bindsym $mod+f fullscreen
-    bindsym $mod+Shift+space floating toggle
-    bindsym $mod+space focus mode_toggle
-    bindsym $mod+a focus parent
+bindsym $mod+h splith
+bindsym $mod+v splitv
+bindsym $mod+tab layout toggle split tabbed
+bindsym $mod+Control+tab layout toggle split
+bindsym $mod+f fullscreen
+bindsym $mod+Shift+space floating toggle
+bindsym $mod+space focus mode_toggle
+bindsym $mod+a focus parent
 #
 # Scratchpad:
 #
 
-    bindsym $mod+Shift+minus move scratchpad
-    bindsym $mod+minus scratchpad show
+bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+minus scratchpad show
 #
 # Resizing containers:
 #
-    mode "resize" {
-        bindsym $left resize shrink width 10px
-        bindsym $down resize grow height 10px
-        bindsym $up resize shrink height 10px
-        bindsym $right resize grow width 10px
+mode "resize" {
+    bindsym $left resize shrink width 10px
+    bindsym $down resize grow height 10px
+    bindsym $up resize shrink height 10px
+    bindsym $right resize grow width 10px
+    
+    # Return to default mode
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+r mode "resize"
 
-        # Return to default mode
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-    }
-    bindsym $mod+r mode "resize"
-
-    # Set colors
-    set $bg-color            #444444
-    set $inactive-bg-color   #444444
-    set $text-color          #ededed
-    set $inactive-text-color #888888
-    set $urgent-bg-color     #e53935
-    set $indicator-color     #FF0000
+# Set colors
+set $bg-color            #444444
+set $inactive-bg-color   #444444
+set $text-color          #ededed
+set $inactive-text-color #888888
+set $urgent-bg-color     #e53935
+set $indicator-color     #FF0000
 
 
-    # set window colors
-    #                       border             background         text                 indicator		child_border
-    client.focused          $bg-color          $bg-color          $text-color          $indicator-color	$bg-color
-    client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color $indicator-color	$bg-color
-    client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color $indicator-color	$bg-color
-    client.urgent           $urgent-bg-color   $urgent-bg-color   $text-color          $indicator-color	$bg-color
+# set window colors
+#                       border             background         text                 indicator		child_border
+client.focused          $bg-color          $bg-color          $text-color          $indicator-color	$bg-color
+client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color $indicator-color	$bg-color
+client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color $indicator-color	$bg-color
+client.urgent           $urgent-bg-color   $urgent-bg-color   $text-color          $indicator-color	$bg-color
 
-    # bindsym Ctrl+Shift+Print exec wf-recorder -g "$(slurp)" -f ~/Videos/recording_$(date +"%Y-%m-%d_%H:%M:%S.webm") --codec=vp8_vaapi  -d /dev/dri/renderD128
-    bindsym Ctrl+Shift+Print exec optirun wf-recorder -g "$(slurp)" -f ~/Videos/recording_$(date +"%Y-%m-%d_%H:%M:%S.mp4") --codec=libx264 -d /dev/dri/renderD128
-    bindsym Ctrl+Shift+BackSpace exec $HOME/.config/sway/kill-casts.sh
-    bindsym $mod+Print exec $HOME/.config/sway/start-cast.sh
-    bindsym $mod+Shift+Print exec $HOME/.config/sway/start-cast-v2.sh
-    bindsym Print exec grim -g "$(slurp)" - | wl-copy
-    bindsym Ctrl+Print exec grim - | wl-copy
+# bindsym Ctrl+Shift+Print exec wf-recorder -g "$(slurp)" -f ~/Videos/recording_$(date +"%Y-%m-%d_%H:%M:%S.webm") --codec=vp8_vaapi  -d /dev/dri/renderD128
+bindsym Ctrl+Shift+Print exec optirun wf-recorder -g "$(slurp)" -f ~/Videos/recording_$(date +"%Y-%m-%d_%H:%M:%S.mp4") --codec=libx264 -d /dev/dri/renderD128
+bindsym Ctrl+Shift+BackSpace exec $HOME/.config/sway/kill-casts.sh
+bindsym $mod+Print exec $HOME/.config/sway/start-cast.sh
+bindsym $mod+Shift+Print exec $HOME/.config/sway/start-cast-v2.sh
+bindsym Print exec grim -g "$(slurp)" - | wl-copy
+bindsym Ctrl+Print exec grim - | wl-copy
 
-    # Tag xwayland windows as such
-	for_window [shell="xwayland"] title_format "<span>[X] %title</span>"
+# Tag xwayland windows as such
+for_window [shell="xwayland"] title_format "<span>[X] %title</span>"
 
 ### include configurations
 
-    include $HOME/.config/sway/config.d/*
-    include /etc/sway/config.d/*
+include $HOME/.config/sway/config.d/*
+include /etc/sway/config.d/*
+
+## RUN Xorg APPS AS ROOT
+exec -q /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
