--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -16,6 +16,7 @@
     // "mpd",
     "pulseaudio",
     "network",
+    "backlight",
     "cpu",
     "memory",
     "temperature",
@@ -45,7 +46,8 @@
     }
   },
   "sway/mode": {
-    "format": "<span style=\"italic\">{}</span>"
+    "format": "<span style=\"italic\"> {}</span>",
+    "max-length": 50
   },
   "mpd": {
     "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ ",
@@ -75,7 +77,7 @@
   },
   "tray": {
     // "icon-size": 21,
-    "spacing": 10
+    "spacing": 16
   },
   "clock": {
     "timezone": "Europe/Lisbon",
@@ -104,9 +106,10 @@
   "backlight": {
     // "device": "acpi_video1",
     "format": "{percent}% {icon}",
+    "on-scroll-up": "$HOME/.config/sway/light2.sh up",
+    "on-scroll-down": "$HOME/.config/sway/light2.sh down",
     "format-icons": [
-      "",
-      ""
+      "", ""
     ]
   },
   "battery": {
@@ -135,7 +138,7 @@
     "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
     "format-linked": "{ifname} (No IP) ",
     "format-disconnected": "Disconnected ⚠",
-    "format-alt": "{ifname}: {ipaddr}/{cidr}"
+    // "format-alt": "{ifname}: {ipaddr}/{cidr}"
   },
   "pulseaudio": {
     // "scroll-step": 1, // %, can be a float
