--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -4,7 +4,7 @@ gtk-theme-name=Matcha-dark-azul
 gtk-icon-theme-name=Papirus-Dark-Maia
 gtk-font-name=Sans 11
 gtk-cursor-theme-name=Breeze
-gtk-cursor-theme-size=0
+gtk-cursor-theme-size=24
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
 gtk-button-images=0
